RESOLVED FIXED107730
Mac: Video appears in wrong place during pinch operations
https://bugs.webkit.org/show_bug.cgi?id=107730
Summary Mac: Video appears in wrong place during pinch operations
Jer Noble
Reported 2013-01-23 13:50:56 PST
Mac: Video appears in wrong place during pinch operations
Attachments
Patch (2.10 KB, patch)
2013-01-23 13:53 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-01-23 13:53:14 PST
Jer Noble
Comment 2 2013-01-24 12:16:26 PST
Note You need to log in before you can comment on or make changes to this bug.