Mac: Video appears in wrong place during pinch operations https://bugs.webkit.org/show_bug.cgi?id=107730

Reviewed by Eric Carlson.

Send the correct input and output rects, post translation and scaling,
to the CIContext for drawing.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput):

Canonical link: https://commits.webkit.org/126029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140704 268f45cc-cd09-0410-ab3c-d52691b4dbfc